<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_car"
            android:icon="@drawable/add_car"
            android:title="@string/add_car" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_password"
            android:title="تغيير كلمة المرور" />
        <item
            android:id="@+id/nav_check_center"
            android:icon="@drawable/check_center"
            android:title="مراكز الفحص المعتمدة" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>