<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="center"
                android:text="@string/login"

                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:hint="@string/email"
                android:padding="@dimen/_2sdp">

                <EditText
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    tools:targetApi="lollipop" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:hint="@string/password"
                android:padding="@dimen/_2sdp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    tools:targetApi="lollipop" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/newsMoreTextSize" />

            <Button
                android:id="@+id/btn_login_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_login_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="center_horizontal"
                android:text="@string/do_not_have_acc"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
