<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="@dimen/loginCardRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="center"
                android:text="@string/register"

                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:padding="@dimen/_2sdp">

                <EditText
                    android:id="@+id/ed_sign_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1"

                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/newsMoreTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:counterMaxLength="10"
                app:counterTextColor="@color/colorPrimary"
                app:counterEnabled="true"
                android:padding="@dimen/_2sdp">

                <EditText
                    android:id="@+id/ed_sign_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/newsMoreTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputIDNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"

                app:counterEnabled="true"
                android:padding="@dimen/_2sdp"
                app:counterMaxLength="10">

                <EditText
                    android:id="@+id/ed_sign_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_number"

                    android:inputType="number"
                    android:maxLines="1"

                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/newsMoreTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:padding="@dimen/_2sdp">

                <EditText
                    android:id="@+id/ed_sign_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"

                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/newsMoreTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:padding="@dimen/_2sdp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ed_sign_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/newsMoreTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:backgroundTint="#00a5ff"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sign_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="center_horizontal"
                android:text="@string/already_have_acc"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
