<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_4sdp"

    android:elevation="10dp"
    app:cardBackgroundColor="#1600A5FF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_home_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linear_home_plate_number"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="10"
            android:background="@drawable/plate_number"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:lineHeight="25dp"
                android:text="Jordan\nالأردن"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_home_pre_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:textColor="#000"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="-"
                android:textColor="#000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_home_car_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:textColor="#000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="10"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_home_plate_number">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_home_registration_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="45646"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.legacy.widget.Space
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_number"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_home_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="رياض الفقيه "
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.legacy.widget.Space
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_10sdp" />

            <Button
                android:id="@+id/btn_hone_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/edit_text"
                android:text="@string/details"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:textAllCaps="false" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>